--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h2>El universo musical</h2>
             <a href="index.html">Home</a>
             <a href="sobreNosotros.html">About us</a>
+            <a href="soporte.html">Soporte</a>
             <a href="busqueda.html">Busqueda</a>
             <a href="log_in.html">log in</a>
         </nav>
