Faltan las páginas de busqueda, error y soporte.

--- a/detalle_artistas.html
+++ b/detalle_artistas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,31 +9,63 @@
 
     <title>Artita</title>
 </head>
+
 <body>
     <header>
         <nav>
             <h2>El universo musical</h2>
             <a href="index.html">Home</a>
             <a href="sobreNosotros.html">About us</a>
-            <a href="soporte.html">Soporte</a>
+
             <a href="busqueda.html">Busqueda</a>
             <a href="log_in.html">log in</a>
         </nav>
     </header>
     <div>
-        <h2>Nombre</h2>
-        <img>
-        <p>biografía</p>
+        <h2>Yeah Yeah Yeahs</h2>
+        <img src="img/yeah_yeah_yeahs_art.jpg">
+        <h3>Biografía</h3>
+        <p>Yeah Yeah Yeahs are an American indie rock band formed in New York City in 2000. The group is composed of
+            vocalist and pianist Karen O (born Karen Lee Orzolek), guitarist and keyboardist Nick Zinner, and drummer
+            Brian Chase.[4] They are complemented in live performances by second guitarist David Pajo (formerly of Slint
+            and Tortoise), who joined as a touring member in 2009 and replaced Imaad Wasif, who had previously held the
+            role. According to a 2004 interview that aired during their appearance on ABC's Live from Central Park
+            SummerStage series, the band's name was taken from modern New York City vernacular.[5] </p>
         <section id="canciones_po">
             <h3>Canciones más populares</h3>
             <ul>
-                <li></li>
+                <li><a href="detalle_cancion.html">
+                        <h3>Maps</h3>
+                    </a>
+                </li>
+                <li><a href="detalle_cancion.html">
+                        <h3>Heads Will Roll</h3>
+                    </a>
+                </li>
+                <li><a href="detalle_cancion.html">
+                        <h3>Burning</h3>
+                    </a>
+                </li>
             </ul>
         </section>
         <section id="albumes_po">
             <h3>Álbumes más populares</h3>
             <ul>
-                <li></li>
+                <li>
+                    <h3>Fever To Tell</h3>
+                    <img src="img/Yeah_Yeah_Yeahs_-_Fever_to_Tell.png">
+                    <p>Released: </p>
+                    <p>Repoduciones: </p>
+                    <p>Número de canciones</p>
+                </li>
+                <li>
+                    <h3>It's blitz!</h3>
+                    <img src="img/Yeah_Yeah_Yeahs_-_Fever_to_Tell.png">
+                </li>
+                <li>
+                    <h3>Show Your Bones</h3>
+                    <img src="img/Yeah_Yeah_Yeahs_-_Fever_to_Tell.png">
+                </li>
             </ul>
         </section>
     </div>
@@ -48,4 +81,5 @@
         </div>
     </footer>
 </body>
+
 </html>
