--- a/detalle_cancion.html
+++ b/detalle_cancion.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Canción</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -19,16 +21,77 @@
         </nav>
     </header>
     <div>
-        <h2>Nombre</h2>
-        <h3>Genero</h3>
-        <h3>Cantante</h3>
-        <p>Historia</p>
+        <h2>Maps</h2>
+        <img src="img/mapsCancion.jpg" id="img_cancion" alt="foto del video maps">
+        <section>
+            <h3>Genero:</h3>
+            <p>Alternative/Indie, Rock</p>
+            <h3>Artista:</h3>
+            <a href="detalle_artistas.html">Yeah Yeah Yeahs</a>
+            <h3>Released: 2003</h3><br><br>
+            <h3 id="historia_titu">Historia</h3>
+            <p>Todo empezó en entre el 2001 y 2002, cuando el trío neoyorquino lanzó dos EP’s; uno homónimo y otro
+                titulado Machine. El éxito llegó muy rápido para la banda provocando así que tuvieran que salir de gira
+                para promocionar sus canciones. En dicho tour, los Yeah Yeah Yeahs fueron acompañados por Liars, una
+                banda australiana liderada por Angus Andrew, quien tiempo después se hizo novio de Karen O.</p>
+            <p>El grupo conformado también por el guitarrista Nick Zinner y el baterista Brian Chase, además de tener
+                canciones bien ‘garage rock’, tenía una muy melancólica que marcó a toda una generación en México que,
+                sin entender bien su letra, pensaron que se trataba de amor y hasta empezaron a dedicarla a sus parejas.
+            </p>
+            <p>¿Ya sabes de cuál hablamos? Sí, de ‘Maps’. Esa rola que te hace mover la cabeza y las manos como si
+                estuvieras tocando la batería. </p>
+
+            <h3>Letra: </h3>
+            <p>
+                OverviewLyricsListenArtists
+                Lyrics
+                Pack up
+                I'm straight
+                Enough
+                Oh, say, say, say
+                Oh, say, say, say
+                Oh, say, say, say
+                Oh, say, say, say
+                Oh, say, say, say
+                Wait, they don't love you like I love you
+                Wait, they don't love you like I love you
+                Maps
+                Wait, they don't love you like I love you
+                Made off
+                Don't stray
+                Well, my kind's your kind
+                I'll stay the same
+                Pack up
+                Don't stray
+                Oh, say, say, say
+                Oh, say, say, say
+                Wait, they don't love you like I love you
+                Wait, they don't love you like I love you
+                Maps
+                Wait, they don't love you like I love you
+                Wait, they don't love you like I love you
+                Maps
+                Wait, they don't love you like I love you
+                Wait, they don't love you like I love you
+                Wait, they don't love you like I love you
+                Maps
+                Wait, they don't love you like I love you
+                Wait, they don't love you like I love you
+                Maps
+                Wait, they don't love you like I love you
+                Source: LyricFind
+            </p>
+        </section>
+
         <section id="albumes_po">
-            <h3>Álbum al que pertenece</h3>
-            <img>
+            <h3>Álbum: Fever To Tell</h3>
+            <img src="img/Yeah_Yeah_Yeahs_-_Fever_to_Tell.png">
         </section>
         <section id="estadisticas">
-            <p>Estadistcas</p>
+            <h2>Estadistcas</h2>
+            <ul>
+                <li>Número de repoduciones:</li>
+            </ul>
         </section>
     </div>
     <footer>
@@ -43,4 +106,5 @@
         </div>
     </footer>
 </body>
+
 </html>
