--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <section id="artitas">
         <h2>Artitas más escuchados</h2>
         <div>
-            <h3>Nombre</h3>
-            <a href="detalle_artistas.html"><img></a>
+            <h3>Yeah Yeah Yeahs</h3>
+            <a href="detalle_artistas.html"><img src="img/yeah_yeah_yeahs_art.jpg"></a>
         </div>
         <div>
             <h3>Nombre</h3>
@@ -46,47 +46,47 @@
     <section id="canciones">
         <h2>Canciones populares</h2>
         <div>
-            <h3>Nombre</h3>
-            <a href="detalle_cancion.html"><img></a>
+            <h3>Maps</h3>
+            <a href="detalle_cancion.html"><img src="img/mapsCancion.jpg"></a>
+        </div>
+        <div>
+            <h3>Maps</h3>
+            <a href="detalle_cancion.html"><img src=""></a>
         </div>
         <div>
             <h3>Nombre</h3>
-            <a href="detalle_cancion.html"><img></a>
+            <a href="detalle_cancion.html"><img src=""></a>
         </div>
         <div>
             <h3>Nombre</h3>
-            <a href="detalle_cancion.html"><img></a>
+            <a href="detalle_cancion.html"><img src=""></a>
         </div>
         <div>
             <h3>Nombre</h3>
-            <a href="detalle_cancion.html"><img></a>
-        </div>
-        <div>
-            <h3>Nombre</h3>
-            <a href="detalle_cancion.html"><img></a>
+            <a href="detalle_cancion.html"><img src=""></a>
         </div>
     </section>
     <section id="albumes">
         <h2>Álbumes recomendados</h2>
         <div>
-            <h3>Nombre</h3>
-            <img>
+            <h3>Fever To Tell</h3>
+            <img src="img/Yeah_Yeah_Yeahs_-_Fever_to_Tell.png">
         </div>
         <div>
             <h3>Nombre</h3>
-            <img>
+            <img src="">
         </div>
         <div>
             <h3>Nombre</h3>
-            <img>
+            <img src="">
         </div>
         <div>
             <h3>Nombre</h3>
-            <img>
+            <img src="">
         </div>
         <div>
             <h3>Nombre</h3>
-            <img>
+            <img src="">
         </div>
     </section>
     <footer>
