--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -21,6 +21,7 @@
         </nav>
     </header>
     <div id="container">
+        <img src="img/imgMusic.avif">
         <section id="historia">
             <h2>Nuestra historia</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
