--- a/error.html
+++ b/error.html
@@ -3,10 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/pagError.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Página de error</title>
 </head>
 <body>
-    <h1>Error: </h1>
-    <img>
+    <header>
+        <nav>
+            <h2>El universo musical</h2>
+            <a href="index.html">Home</a>
+            <a href="sobreNosotros.html">About us</a>
+            <a href="soporte.html">Soporte</a>
+            <a href="busqueda.html">Busqueda</a>
+            <a href="log_in.html">log in</a>
+        </nav>
+    </header>
+    <div id="container-error">
+        <h1>Error: </h1>
+        <img src="">
+    </div>
+    
+    <footer>
+        <div class="footer-content">
+            <p>© 2025 El universo musical</p>
+            <div class="social-icons">
+                <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                <a href="#" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
