Modificaciones en las funciones para el boton de favoritos

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="soporte.html">Soporte</a>
             <a href="busqueda.html">Busqueda</a>
             <a href="log_in.html">log in</a>
+            <a href="perfil_usuario.html">Perfil</a>
         </nav>
     </header>
     <section id="artitas">
