--- a/perfil_usuario.html
+++ b/perfil_usuario.html
@@ -19,6 +19,13 @@
         </nav>
     </header>
 
+    <main>
+        <div id="user_info">
+            <img src="img/imgMusic.avif" alt="foto de perfil">
+            <h2>Nombre</h2>
+
+        </div>
+    </main>
     <footer>
         <div class="footer-content">
             <p>© 2025 El universo musical</p>
