--- a/detalle_cancion.html
+++ b/detalle_cancion.html
@@ -18,10 +18,11 @@
             <a href="soporte.html">Soporte</a>
             <a href="busqueda.html">Busqueda</a>
             <a href="log_in.html">log in</a>
+            <a href="perfil_usuario.html">Perfil</a>
         </nav>
     </header>
     <div>
-        <h2>Maps</h2>
+        <h2 id="can_nom">Maps</h2>
         <button id="favBtn"><i class="fa-regular fa-heart"></i> Agregar a favoritos</button>
         <img src="img/mapsCancion.jpg" id="img_cancion" alt="foto del video maps">
         <section>
@@ -108,7 +109,9 @@
     </footer>
     <script>
         const favBtn = document.getElementById('favBtn');
-        const cancion = "Yeah Yeah Yeahs";
+        const cancion =document.getElementById("can_nom").textContent;
+
+        console.log(cancion)
     
         // Cambia ícono si ya está en favoritos
         if (localStorage.getItem(cancion)) {
@@ -117,7 +120,7 @@
     
         favBtn.addEventListener('click', () => {
             if (!localStorage.getItem(cancion)) {
-                localStorage.setItem(cancion, true);
+                localStorage.setItem("can_"+cancion, true);
                 favBtn.innerHTML = '<i class="fa-solid fa-heart"></i> En favoritos';
                 alert("¡Agregado a favoritos!");
             } else {
@@ -126,6 +129,8 @@
                 alert("Removido de favoritos.");
             }
         });
+
+        console.log(localStorage)
     </script>
 </body>
 
