Icono de busqueda, cambios en el nav

--- a/busqueda.html
+++ b/busqueda.html
@@ -14,7 +14,7 @@
             <a href="index.html">Home</a>
             <a href="sobreNosotros.html">About us</a>
             <a href="soporte.html">Soporte</a>
-            <a href="busqueda.html">Busqueda</a>
+            <a href="busqueda.html"><i class="fas fa-search"></i></a>
             <a href="log_in.html">Log in</a>
         </nav>
     </header>
@@ -29,13 +29,13 @@
                 <a href="detalle_cancion.html"><h3>Nombre</h3></a>
             </section>
             <section>
-                <h3>Nombre</h3>
+                <a href="detalle_cancion.html"><h3>Nombre</h3></a>
             </section>
             <section>
-                <h3>Nombre</h3>
+                <a href="detalle_cancion.html"><h3>Nombre</h3></a>
             </section>
             <section>
-                <h3>Nombre</h3>
+                <a href="detalle_cancion.html"><h3>Nombre</h3></a>
             </section>
         </di>
     </main>
