--- a/perfil_usuario.html
+++ b/perfil_usuario.html
@@ -14,7 +14,7 @@
       <a href="index.html">Home</a>
       <a href="sobreNosotros.html">About us</a>
       <a href="soporte.html">Soporte</a>
-      <a href="busqueda.html">Busqueda</a>
+      <a href="busqueda.html"><i class="fas fa-search"></i></a>
       <a href="log_in.html">Log in</a>
     </nav>
   </header>
