--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
+
 <body>
     <header>
         <nav>
             <h2>El universo musical</h2>
-            <a href="index.html">Home</a>
-            <a href="sobreNosotros.html">About us</a>
-            <a href="soporte.html">Soporte</a>
-            <a href="busqueda.html">Busqueda</a>
-            <a href="log_in.html">log in</a>
-            <a href="perfil_usuario.html">Perfil</a>
+            <div id="enlancesNav">
+                <a href="busqueda.html"><i class="fas fa-search"></i></a>
+                <a href="index.html">Home</a>
+                <a href="log_in.html">Log in</a>
+                <a href="sobreNosotros.html">About us</a>
+                <a href="soporte.html">Soporte</a>
+                <a href="perfil_usuario.html">Perfil</a>
+            </div>
+
         </nav>
     </header>
     <section id="artitas">
@@ -102,4 +106,5 @@
         </div>
     </footer>
 </body>
+
 </html>
