Cambios en el nav  su css

--- a/detalle_artistas.html
+++ b/detalle_artistas.html
@@ -13,13 +13,16 @@
 <body>
     <header>
         <nav>
-            <h2 id="art_nom">El universo musical</h2>
-            <a href="index.html">Home</a>
-            <a href="sobreNosotros.html">About us</a>
+            <h2>El universo musical</h2>
+            <div id="enlancesNav">
+                <a href="busqueda.html"><i class="fas fa-search"></i></a>
+                <a href="index.html">Home</a>
+                <a href="log_in.html">Log in</a>
+                <a href="sobreNosotros.html">About us</a>
+                <a href="soporte.html">Soporte</a>
+                <a href="perfil_usuario.html">Perfil</a>
+            </div>
 
-            <a href="busqueda.html">Busqueda</a>
-            <a href="log_in.html">log in</a>
-            <a href="perfil_usuario.html">Perfil</a>
         </nav>
     </header>
     <div>
