--- a/registro.html
+++ b/registro.html
@@ -11,11 +11,14 @@
     <header>
         <nav>
             <h2>El universo musical</h2>
-            <a href="index.html">Home</a>
-            <a href="sobreNosotros.html">About us</a>
-            <a href="soporte.html">Soporte</a>
-            <a href="busqueda.html"><i class="fas fa-search"></i></a>
-            <a href="log_in.html">log in</a>
+            <div id="enlancesNav">
+                <a href="busqueda.html"><i class="fas fa-search"></i></a>
+                <a href="index.html">Home</a>
+                <a href="log_in.html">Log in</a>
+                <a href="sobreNosotros.html">About us</a>
+                <a href="soporte.html">Soporte</a>
+            </div>
+
         </nav>
     </header>
     <div id="container-registro">
