--- a/busqueda.html
+++ b/busqueda.html
@@ -1,61 +1,55 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Búsqueda</title>
-    <link rel="stylesheet" href="css/pagBusqueda.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Página de Búsqueda</title>
+  <link rel="stylesheet" href="css/pagBusqueda.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <script src="scripts/buscador.js" defer></script>
 </head>
+
 <body>
-    <header>
-        <nav>
-            <h2>El universo musical</h2>
-            <div id="enlancesNav">
-                <a href="busqueda.html"><i class="fas fa-search"></i></a>
-                <a href="index.html">Home</a>
-                <a href="log_in.html">Log in</a>
-                <a href="sobreNosotros.html">About us</a>
-                <a href="soporte.html">Soporte</a>
-                <a href="perfil_usuario.html">Perfil</a>
-            </div>
+  <header>
+    <nav>
+      <h2>El universo musical</h2>
+      <div id="enlancesNav">
+        <a href="busqueda.html" title="Buscar"><i class="fas fa-search"></i></a>
+        <a href="index.html">Home</a>
+        <a href="log_in.html">Log in</a>
+        <a href="sobreNosotros.html">About us</a>
+        <a href="soporte.html">Soporte</a>
+        <a href="perfil_usuario.html"><i class="fas fa-user"></i></a>
+      </div>
+    </nav>
+  </header>
 
-        </nav>
-    </header>
+  <main id="container">
+    <h1>Busca tus artistas o canciones favoritas</h1>
+    <input type="text" id="search" placeholder="Escribe aquí...">
+    <ul id="resultados"></ul>
 
-    <main id="container">
-        <h1>Busca tus artistas o canciones favoritas</h1>
-        <input type="text" id="search" placeholder="Escribe aquí...">
-        <ul id="resultados"></ul>
-        <div id="recomendados">
-            <h2>Recomendados</h2>
-            <section>
-                <a href="detalle_cancion.html"><h3>Nombre</h3></a>
-            </section>
-            <section>
-                <a href="detalle_cancion.html"><h3>Nombre</h3></a>
-            </section>
-            <section>
-                <a href="detalle_cancion.html"><h3>Nombre</h3></a>
-            </section>
-            <section>
-                <a href="detalle_cancion.html"><h3>Nombre</h3></a>
-            </section>
-        </di>
-    </main>
+    <div id="recomendados">
+      <h2>Recomendados</h2><br>
+      <section><a href="detalle_cancion.html"><h3>Nombre 1</h3></a></section>
+      <section><a href="detalle_cancion.html"><h3>Nombre 2</h3></a></section>
+      <section><a href="detalle_cancion.html"><h3>Nombre 3</h3></a></section>
+      <section><a href="detalle_cancion.html"><h3>Nombre 4</h3></a></section>
+    </div>
+  </main>
 
-    <footer>
-        <div class="footer-content">
-            <p>© 2025 El universo musical</p>
-            <div class="social-icons">
-                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-            </div>
-        </div>
-    </footer>
+  <footer>
+    <div class="footer-content">
+      <p>© 2025 El universo musical</p>
+      <div class="social-icons">
+        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+        <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+        <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+      </div>
+    </div>
+  </footer>
 
-    <script src="js/busqueda.js"></script>
+  <script src="js/busqueda.js"></script>
 </body>
 </html>
