botones para cargar más artistas, canciones... mejoras: pagina de error, logout... y sus css

--- a/detalle_artistas.html
+++ b/detalle_artistas.html
@@ -20,7 +20,7 @@
                 <a href="log_in.html">Log in</a>
                 <a href="sobreNosotros.html">About us</a>
                 <a href="soporte.html">Soporte</a>
-                <a href="perfil_usuario.html">Perfil</a>
+                <a href="perfil_usuario.html"><i class="fas fa-user"></i></a>
             </div>
 
         </nav>
