--- a/detalle_cancion.html
+++ b/detalle_cancion.html
@@ -13,12 +13,15 @@
     <header>
         <nav>
             <h2>El universo musical</h2>
-            <a href="index.html">Home</a>
-            <a href="sobreNosotros.html">About us</a>
-            <a href="soporte.html">Soporte</a>
-            <a href="busqueda.html">Busqueda</a>
-            <a href="log_in.html">log in</a>
-            <a href="perfil_usuario.html">Perfil</a>
+            <div id="enlancesNav">
+                <a href="busqueda.html"><i class="fas fa-search"></i></a>
+                <a href="index.html">Home</a>
+                <a href="log_in.html">Log in</a>
+                <a href="sobreNosotros.html">About us</a>
+                <a href="soporte.html">Soporte</a>
+                <a href="perfil_usuario.html"><i class="fas fa-user"></i></a>
+            </div>
+
         </nav>
     </header>
     <div>
