id agregado para el nombre del artista

--- a/detalle_artistas.html
+++ b/detalle_artistas.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <div>
-        <h2>Yeah Yeah Yeahs</h2>
+        <h2 id="art_nom">Yeah Yeah Yeahs</h2>
         <button id="favBtn"><i class="fa-regular fa-heart"></i> Agregar a favoritos</button>
         <img src="img/yeah_yeah_yeahs_art.jpg">
         <h3>Biografía</h3>
