Modificaciones en el footer y header

--- a/busqueda.html
+++ b/busqueda.html
@@ -6,22 +6,13 @@
   <title>Página de Búsqueda</title>
   <link rel="stylesheet" href="css/pagBusqueda.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <script src="scripts/header.js" defer></script>
+  <script src="scripts/footer.js" defer></script>
   <script src="scripts/buscador.js" defer></script>
 </head>
 
 <body>
-  <header>
-    <nav>
-      <h2>El universo musical</h2>
-      <div id="enlancesNav">
-        <a href="busqueda.html" title="Buscar"><i class="fas fa-search"></i></a>
-        <a href="index.html">Home</a>
-        <a href="log_in.html">Log in</a>
-        <a href="sobreNosotros.html">About us</a>
-        <a href="soporte.html">Soporte</a>
-        <a href="perfil_usuario.html"><i class="fas fa-user"></i></a>
-      </div>
-    </nav>
+  <header id="header">
   </header>
 
   <main id="container">
@@ -38,16 +29,7 @@
     </div>
   </main>
 
-  <footer>
-    <div class="footer-content">
-      <p>© 2025 El universo musical</p>
-      <div class="social-icons">
-        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-        <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-        <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-      </div>
-    </div>
+  <footer id="footer">
   </footer>
 
   <script src="js/busqueda.js"></script>
