--- a/detalle_cancion.html
+++ b/detalle_cancion.html
@@ -6,23 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/cancion.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <script src="scripts/header.js" defer></script>
+    <script src="scripts/footer.js" defer></script>
     <title>Canción</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <h2>El universo musical</h2>
-            <div id="enlancesNav">
-                <a href="busqueda.html"><i class="fas fa-search"></i></a>
-                <a href="index.html">Home</a>
-                <a href="log_in.html">Log in</a>
-                <a href="sobreNosotros.html">About us</a>
-                <a href="soporte.html">Soporte</a>
-                <a href="perfil_usuario.html"><i class="fas fa-user"></i></a>
-            </div>
-
-        </nav>
+    <header id="header">
     </header>
     <div>
         <h2 id="can_nom">Maps</h2>
@@ -99,16 +89,7 @@
             </ul>
         </section>
     </div>
-    <footer>
-        <div class="footer-content">
-            <p>© 2025 El universo musical</p>
-            <div class="social-icons">
-                <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                <a href="#" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-            </div>
-        </div>
+    <footer id="footer">
     </footer>
     <script>
         const favBtn = document.getElementById('favBtn');
