--- a/log_in.html
+++ b/log_in.html
@@ -5,21 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <script src="scripts/header.js" defer></script>
+    <script src="scripts/footer.js" defer></script>
     <title>Log in</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <h2>El universo musical</h2>
-            <div id="enlancesNav">
-                <a href="busqueda.html"><i class="fas fa-search"></i></a>
-                <a href="index.html">Home</a>
-                <a href="log_in.html">Log in</a>
-                <a href="sobreNosotros.html">About us</a>
-                <a href="soporte.html">Soporte</a>
-            </div>
-
-        </nav>
+    <header id="header">
     </header>
     <div id="container-form">
         <h1>Log in</h1>
@@ -32,16 +23,7 @@
         </form>
         <p>¿No tienes una cuenta?<a href="registro.html">Registrate</a></p>
     </div>
-    <footer>
-        <div class="footer-content">
-            <p>© 2025 El universo musical</p>
-            <div class="social-icons">
-                <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                <a href="#" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-            </div>
-        </div>
+    <footer id="footer">
     </footer>
 
     <script>
